# osf-to-binder

./: .gitattributes  .gitignore  Python_Script_For_Dependency_File_Search.ipynb  README.md  download_osf_files.py  pyproject.toml
Automating_Reproducibility/: Error_Analysis.ipynb  Project_Ids_with_Dependency_File.txt  automated_pipeline.sh  automation_pipeline.py  execute_r_files_in_container.py  execution_results.csv  failed_execution_log.txt  failed_log.py  failed_projects.csv  flowr_dependency_query.py  merge_log.py  pipeline.py  project_id.txt  run_code_in_container.py  statcodesearch_pckg_urls (1).csv  successful_projects.csv  updated_statcodesearch.csv  utils.py
Dependency File Search/: Code_Meta_data_Extraction_(Rule_based_Method).ipynb  OSF_Meta_Data_SC_v0.csv  Python_Script_For_Dependency_File_Search (1) (1).ipynb  Python_Script_For_Dependency_File_Search.ipynb  Python_Script_For_Dependency_File_Search_Updated.ipynb  StatCodeSearch-Code-Comment-Metadata-V0.csv  osf_dependency_results.csv
Dependency File Search/Automating_Reproducibility/: automate_project_dependencies.py
Error_Analysis/: Error_Analysis.ipynb  updated_statcodesearch.csv
Social Status Life Satisfaction/: README.md
pipeline/: build_container.py  create_repository.py  deploy_container.py  error_analysis.py  execute_r_files_in_container.py  flowr_dependency_query.py  osf_api_file_download.py  osf_zip_file_download.py  pipeline.py  project_id_r_code_file.csv  run.py  run_code_in_container.py  utils.py
pupillometry_tutorial_calignano/: README.md
(+4 files in other folders)
